# xcelsior

./: .dockerignore  .env.audit.example  .env.example  .env.paypal-live.example  .env.paypal-sandbox.example  .env.stripe-live.example  .gitignore  .posthog-events.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.example  HANDOFF.md  LICENSE  PLAN_EXECUTION.md  PWA_PLAN.md  README.md  SPOT_ROLLOUT.md  SPOT_RUNBOOK.md  TERMINAL_P;AN.md  UNTESTED_ENDPOINTS.md  XCELSIOR_UI_UX_AUDIT_2026-06-22.md  agent_preempt.py  ai_assistant.py  ai_assistant_config.py  alembic.ini  api.py  api_old.py  artifacts.py  bg_worker.py  bg_worker.py.bak-reconcile-stop-churn-20260612-132635  billing.py  bitcoin.py  cache_keys.py  chat.py  cli.py  cloudburst.py  compute_scores.json  criu_hosts.py  (+67 more)
.claude/: ._settings.local.json
.github/: FUNDING.yml
config/: stripe_catalog.json  stripe_dashboard.json
control_plane/: README.md  __init__.py  agent_tokens.py  attempts.py  billing_controller.py  billing_reconcile.py  capacity.py  commands.py  db.py  db_roles.py  identity.py  inventory.py  job_targets.py  leases.py  lifecycle.py  observations.py  outbox.py  outbox_runtime.py  reconcile.py  scheduled_tasks.py  schema_compat.py  startup_validation.py  stuck_jobs.py
data/: test_compute_scores.json
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: control-center.json  remote-app.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/permissions/autogenerated/: desktop_check_for_updates.toml  desktop_clear_deep_links.toml  desktop_get_state.toml  desktop_install_update.toml  desktop_open_external_url.toml  desktop_open_main_window.toml  desktop_show_control_center.toml  desktop_sync_remote_state.toml  desktop_update_preferences.toml
desktop/src-tauri/src/: config.rs  contract.rs  lib.rs  main.rs  routing.rs  startup.rs
docs/: AI_ML_MASTER_INDEX_XCELSIOR.md  API_AUTH.md  DASHBOARD_BACKEND_PRODUCTION_COMPLETION_PLAN.md  INFERENCE_DESIGN.md  INSTANCE_LIFECYCLE.md  MASTER_INDEX_SECTION_10_XCELSIOR.synced.md  NEXT_PRIORITIES_ROADMAP.md  OBSERVABILITY.md  PXL_REGISTRY_SECTION_10_MIRROR.md  SPOT_INSTANCE_INTEGRATION_PLAN.md  VOLUMES_COMPLETION_PLAN.md  VOLUMES_RUNBOOK.md  WIZARD_IMPROVEMENTS.md  site-audit-prompt.md  site-audit-report-2026-06-04-reaudit-mcp.md  site-audit-report-2026-06-04-reaudit.md  site-audit-report-2026-06-04.md  site-audit-report-2026-06-06-post-recovery.md  site-audit-report-2026-06-08-post-recovery.md  snapshot-registry.md  track-a-implementation-checklist.md  track-b-implementation-checklist.md
fern/: ai_examples_override.yml  docs.yml  fern.config.json  generators.yml  openapi-overrides.yml  openapi.json
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  patch_en.js  playwright.config.ts  posthog-setup-report.md  serwist.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
mcp/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
mcp-cli/: README.md  package.json
migrations/: README.md  env.py
nginx/: agent-xcelsior.conf  docs-xcelsior.conf  downloads-xcelsior.conf  headscale-http.conf  headscale.conf  mcp-xcelsior.conf  xcelsior.conf
public/: openapi.json
routes/: __init__.py  _deps.py  action_plans.py  admin.py  agent.py  agent_v2.py  artifacts.py  auth.py  autoscale.py  billing.py  chat.py  cloudburst.py  compliance.py  control_plane_v1.py  events.py  gpu.py  health.py  hosts.py  inference.py  instances.py  jurisdiction.py  marketplace.py  mfa.py  notifications.py  platform.py  privacy.py  problem.py  providers.py  reputation.py  serverless.py  sla.py  spot.py  ssh.py  static.py  stripe_connect_v2.py  teams.py  terminal.py  transparency.py  verification.py  volumes.py
runbooks/: operations.md  rtx3060-provider.md
scripts/: agent-signing.pub  agent-signing.pub.b64  apply_headscale_acl.sh  audit-http.mjs  audit_ai_ml_docs.py  audit_cli_coverage.mjs  audit_dashboard_api_check.mjs  audit_route_auth.py  audit_wallet_deposits.py  backup-db.sh  benchmark_deploy_speed.sh  billing_prod_smoke.py  bootstrap_pg_from_empty.sh  capture_kv_served_kpi.py  capture_live_proxy_served_kpi.py  dedup_env.py  (+92 more)
(+1348 files in other folders)
