[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcelsior"
version = "2.3.0"
description = "Distributed GPU cloud platform — built for Canadians"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Xcelsior Team"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi~=0.128.6",
    "python-multipart~=0.0.20",
    "uvicorn[standard]~=0.40.0",
    "gunicorn~=25.0.3",
    "pydantic~=2.12.5",
    "requests~=2.32.5",
    "httpx~=0.28.1",
    "redis~=7.4.0",
    "psycopg[binary]~=3.3.2",
    "psycopg_pool~=3.3.0",
    "alembic~=1.18.4",
    "sqlalchemy~=2.0.46",
    "python-dotenv~=1.2.1",
    "nvidia-ml-py~=13.590.48",
    "stripe~=15.0.0",
    "rich~=14.3.3",
    "docker~=7.1.0",
    "paramiko~=3.5.0",
    "prometheus-client~=0.22.1",
    "cryptography~=46.0.6",
    "pywebpush~=2.1.2",
    "pyotp~=2.9.0",
    "qrcode[pil]~=8.2",
    "fido2~=2.1.1",
    "twilio~=9.10.4",
    "opentelemetry-api~=1.40.0",
    "opentelemetry-sdk~=1.40.0",
    "opentelemetry-instrumentation-fastapi~=0.61b0",
    "opentelemetry-exporter-otlp~=1.40.0",
    "anthropic~=0.86.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py~=13.590.48"]

[project.scripts]
xcelsior = "cli:main"

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-timeout~=2.4.0",
    "hypothesis~=6.115.0",
    "ruff~=0.15.8",
    "black~=26.3.1",
    "pyright==1.1.410",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["templates"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
timeout = 180
timeout_func_only = true