[package]
name = "xcelsior_desktop"
version = "0.1.0"
description = "Xcelsior native desktop shell"
authors = ["Xcelsior"]
edition = "2021"

[lib]
name = "xcelsior_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = { version = "2.4.1", features = ["deep-link"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-updater = "2.10.1"
notify-rust = "4"
url = "2.5.7"
